--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ author: "Saravana Hari M"
 description: "AI/ML Enthusiast | Civil Engineer | Tech Explorer"
 theme: minima
 baseurl: "" 
-url: "https://your-github-username.github.io"
+url: "https://anachronicz.github.io"
